--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,49 @@
-# backend
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+.venv
+pip-log.txt
+pip-delete-this-directory.txt
+.pytest_cache/
+*.egg-info/
 
-.venv/
-plots/*
-train_data/*
-marey-live-ssh.pem
+# R
 .Rhistory
 .RData
-train_img_data.json
+.Rproj.user
 
-# frontend
-
-# Logs
-logs
-*.log
+# Node
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+dist/
+.cache/
 
-node_modules
-dist
-dist-ssr
-*.local
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Local development
+.env
+.env.local
+
+# Temporary files
+*.tmp
+*.temp
+
+# Lock files (can be included but optional)
+new_train_img_data.json
