--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -43,15 +43,9 @@ jobs:
           cp train_img_data.json public/api/trains.json
           cp -r plots/* public/plots/
           
-      - name: Create CORS-enabled API response
-        run: |
-          cat > public/api/trains <<'EOF'
-          $(cat train_img_data.json)
-          EOF
-      
       - name: Create index page
         run: |
-          cat > public/index.html <<'EOF'
+          cat > public/index.html << 'HTMLEOF'
           <!DOCTYPE html>
           <html>
           <head>
@@ -89,28 +83,28 @@ jobs:
               <p>Returns JSON array of active trains with their plot images and animation data.</p>
               
               <h3>Get Plot Images</h3>
-              <p><code>GET /plots/{filename}.png</code></p>
+              <p><code>GET /plots/FILENAME.png</code></p>
               <p>Access individual plot images.</p>
               
               <h2>Example Usage</h2>
               <pre><code>// Fetch train data
-fetch('https://{username}.github.io/{repo}/api/trains.json')
-  .then(res => res.json())
-  .then(data => console.log(data));
-
-// Image URL example
-const imageUrl = 'https://{username}.github.io/{repo}/plots/main_plot_123.png';</code></pre>
+          fetch('https://USERNAME.github.io/REPO/api/trains.json')
+            .then(res => res.json())
+            .then(data => console.log(data));
+          
+          // Image URL example
+          const imageUrl = 'https://USERNAME.github.io/REPO/plots/main_plot_123.png';</code></pre>
               
               <h2>CORS</h2>
               <p>All endpoints support CORS and can be accessed from any domain.</p>
               
               <h2>Update Frequency</h2>
-              <p>Data is updated every 3 minutes via GitHub Actions.</p>
+              <p>Data is updated automatically via GitHub Actions.</p>
               
               <p><a href="https://github.com/YOUR_USERNAME/YOUR_REPO">View on GitHub</a></p>
           </body>
           </html>
-          EOF
+          HTMLEOF
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
