--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -68,9 +68,7 @@ jobs:
               <p><code>GET /plots/FILENAME.png</code></p>
               <p>Access individual plot images.</p>
               <h2>Example Usage</h2>
-              <pre><code>fetch('https://USERNAME.github.io/REPO/api/trains.json')
-            .then(res => res.json())
-            .then(data => console.log(data));</code></pre>
+              <pre><code>fetch('https://USERNAME.github.io/REPO/api/trains.json').then(res => res.json()).then(data => console.log(data));</code></pre>
               <h2>CORS</h2>
               <p>All endpoints support CORS and can be accessed from any domain.</p>
               <h2>Update Frequency</h2>
