--- a/.github/workflows/update-plots.yml
+++ b/.github/workflows/update-plots.yml
@@ -17,8 +17,14 @@ jobs:
   update:
     runs-on: ubuntu-latest
     
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
     permissions:
       contents: write
+      pages: write
+      id-token: write
     
     steps:
       - name: Checkout repository
@@ -79,11 +85,54 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
       
-      - name: Commit and push changes
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      
+      - name: Create public directory for GitHub Pages
         run: |
-          git add plots/ train_img_data.json
-          git diff --staged --quiet || git commit -m "Update plots and train data [skip ci] - $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          mkdir -p public/api
+          mkdir -p public/plots
+          cp train_img_data.json public/api/trains.json
+          cp -r plots/* public/plots/
+          cat > public/index.html <<'EOF'
+          <!DOCTYPE html>
+          <html>
+          <head>
+              <title>Amtrak Live - API</title>
+              <meta charset="utf-8">
+              <style>
+                  body { font-family: system-ui, -apple-system, sans-serif; max-width: 800px; margin: 40px auto; padding: 20px; line-height: 1.6; }
+                  code { background: #f4f4f4; padding: 2px 6px; border-radius: 3px; }
+                  pre { background: #f4f4f4; padding: 15px; border-radius: 5px; overflow-x: auto; }
+              </style>
+          </head>
+          <body>
+              <h1>Amtrak Live API</h1>
+              <p>This API provides real-time Amtrak Northeast Corridor train data and visualizations.</p>
+              <h2>Endpoints</h2>
+              <h3>Get Train Data</h3>
+              <p><code>GET /api/trains.json</code></p>
+              <p>Returns JSON array of active trains with their plot images and animation data.</p>
+              <h3>Get Plot Images</h3>
+              <p><code>GET /plots/FILENAME.png</code></p>
+              <p>Access individual plot images.</p>
+              <h2>Example Usage</h2>
+              <pre><code>fetch('https://USERNAME.github.io/REPO/api/trains.json').then(res => res.json()).then(data => console.log(data));</code></pre>
+              <h2>CORS</h2>
+              <p>All endpoints support CORS and can be accessed from any domain.</p>
+              <h2>Update Frequency</h2>
+              <p>Data is updated automatically via GitHub Actions.</p>
+              <p><a href="https://github.com/YOUR_USERNAME/YOUR_REPO">View on GitHub</a></p>
+          </body>
+          </html>
+          EOF
+      
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './public'
+      
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
 
